--- a/example/winui-component-connector.xaml
+++ b/example/winui-component-connector.xaml
@@ -10,8 +10,8 @@
     <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
         <!-- Visual Studio generates ConnectionId and connection code from xaml. -->
         <!--
-            <Button x:Name="Button1" Click="Button1_OnClick">Click Me</Button>
-            <Button x:Name="Button2" Click="Button2_OnClick">Click Me</Button>
+            <Button x:Name="Button1" Click="Button1_Click">Click Me</Button>
+            <Button x:Name="Button2" Click="Button2_Click">Click Me</Button>
         -->
         <Button x:ConnectionId="1">Click Me</Button>
         <Button x:ConnectionId="2">Click Me</Button>
